# bits-io

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml  rust.yml
benches/: put_get_ux.rs
src/: Notes.md  bit_cursor.rs  bit_read.rs  bit_read_exts.rs  bit_seek.rs  bit_slice.rs  bit_slice_mut.rs  bit_slice_traits.rs  bit_types.rs  bit_write.rs  bit_write_exts.rs  bitcursor.rs  borrow_bits.rs  byte_order.rs  error.rs  lib.rs  prelude.rs  sub_cursor.rs  types.rs  util.rs
src/buf/: bit_buf.rs  bit_buf_exts.rs  bit_buf_impls.rs  bit_buf_mut.rs  bit_buf_mut_exts.rs  bit_buf_mut_impls.rs  bit_take.rs  bits.rs  bits_mut.rs  buf_impl.rs  byte_order.rs  chain.rs  limit.rs  mod.rs  take.rs  util.rs
src/io/: bit_cursor.rs  bit_read.rs  bit_seek.rs  bit_slice_traits.rs  bit_write.rs  mod.rs
