[package]
name = "bits-io"
version = "0.2.0"
edition = "2021"
description = "Bit-level IO operations"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nsw-types = { version = "0.1.11", features = ["num-traits", "std"] }
bitvec = "1.0.1"
bytes = "1.10.1"
funty = "2.0.0"
